# mitm-api

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: docker-build.yml  test.yml
templates/: base.html  configure.html  configure_success.html  error.html  view_request.html  view_websocket.html
tests/: conftest.py  test_analysis.py  test_openai_proxy.py  test_persistence.py  test_redirection.py  test_security.py  test_views.py
