[project]
name = "mitm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli==1.1.0",
    "fastapi==0.127.0",
    "httpx==0.28.1",
    "jinja2==3.1.4",
    "pytest==9.0.2",
    "pytest-asyncio==0.22.0",
    "python-multipart==0.0.21",
    "uvicorn[standard]==0.40.0",
    "websockets==14.1",
]
