[project]
name = "mitm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli==1.1.0",
    "fastapi==0.127.0",
    "httpx==0.28.1",
    "jinja2==3.1.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "python-multipart==0.0.21",
    "uvicorn[standard]==0.40.0",
    "websockets==14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
